--- a/src/app/components/clinica-lista/clinica-lista.component.html
+++ b/src/app/components/clinica-lista/clinica-lista.component.html
@@ -19,7 +19,8 @@
             <td>{{ cli.estado }}</td>
             <td>
                 <!--<button (click)="deleteEmployee(employee.id)" class="btn btn-danger">Delete</button>-->
-                <button (click)="mostrarDetalles(cli.id)" class="btn btn-info" style="margin-left: 10px">Details</button>
+                <button (click)="mostrarDetalles(cli.id)" class="btn btn-info" style="margin-left: 5px">Details</button>
+                <button (click)="mostrarDoctores(cli.id)" class="btn btn-info" style="margin-left: 5px">Docs</button>
             </td>
           </tr>
         </tbody>
