--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,22 @@
 <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
   <!-- Links -->
   <ul class="navbar-nav">
-    <li class="nav-item">
-        <a routerLink="/clinica-lista" class="nav-link" routerLinkActive="active">Listar clinicas</a>
+    <li class="nav-item" ngbDropdown>
+      <a class="nav-link" style="cursor: pointer" ngbDropdownToggle id="navbarDropdown1" 
+        role="button" routerLinkActive="active"> Clinicas</a>
+      <div ngbDropdownMenu aria-labelledby="navbarDropdown1" class="dropdown-menu">
+        <a ngbDropdownItem routerLink="/clinica-lista" (click)="$event.preventDefault()" routerLinkActive="active">Listar</a>
+        <a ngbDropdownItem routerLink="/clinica-add" (click)="$event.preventDefault()" routerLinkActive="active">Crear</a>
+      </div>
     </li>
-    <li class="nav-item">
-        <a routerLink="/clinica-add" class="nav-link" routerLinkActive="active">Adicionar clinica</a>
+    <li class="nav-item" ngbDropdown>
+      <a class="nav-link" style="cursor: pointer" ngbDropdownToggle id="navbarDropdown1" 
+        role="button">Doctores</a>
+      <div ngbDropdownMenu aria-labelledby="navbarDropdown1" class="dropdown-menu">
+        <a ngbDropdownItem routerLink="/doctor-lista" (click)="$event.preventDefault()" routerLinkActive="active">Listar</a>
+        <a ngbDropdownItem routerLink="/doctor-add" (click)="$event.preventDefault()" routerLinkActive="active">Crear</a>
+      </div>
     </li>  
-    <li class="nav-item">
-      <a routerLink="/doctor-lista" class="nav-link" routerLinkActive="active">Listar doctores</a>
-    </li>
-    <li class="nav-item">
-        <a routerLink="/doctor-add" class="nav-link" routerLinkActive="active">Adicionar doctor</a>
-    </li>    
   </ul>
   <ul class="navbar-nav ml-auto">
     <li class="nav-item">
@@ -20,6 +24,7 @@
     </li>
   </ul>
 </nav>
+<!--<app-sidebar></app-sidebar>-->
 <div class="container" >
   <br>
   <h2 style="text-align: center;">{{title}}</h2>
