--- a/src/app/components/clinica-lista/clinica-lista.component.html
+++ b/src/app/components/clinica-lista/clinica-lista.component.html
@@ -1,4 +1,5 @@
-<div class="panel panel-primary">
+<div class="container-fluid">
+  <div class="panel panel-primary">
     <div class="panel-heading">
       <h3>Clinicas</h3>
     </div>
@@ -30,3 +31,4 @@
       </div>
     </div>    
   </div>
+</div>
