--- a/src/app/components/modals/cliente-contact-modal/cliente-contact-modal.component.html
+++ b/src/app/components/modals/cliente-contact-modal/cliente-contact-modal.component.html
@@ -3,7 +3,7 @@
         <h3 id="modal-title">Datos de contacto</h3>
     </div>
     <div class="col-sm-6">
-        <button class="close" mat-button (click)="closeModal()">X</button>
+        <button class="close" mat-button (click)="closeModal(null)">X</button>
     </div>
 </div>
 <form [formGroup]="contactForm" class="form-horizontal">
