--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -36,7 +36,7 @@
     <!-- /.login-logo -->
     <div class="card">
         <div class="card-body login-card-body">
-            <p class="login-box-msg">Inicio de sesion</p>
+            <p class="login-box-msg">Inicio de sesión</p>
 
             <form [formGroup]="loginForm">
                 <div class="input-group mb-3">
