--- a/src/app/components/modals/cliente-contact-modal/cliente-contact-modal.component.html
+++ b/src/app/components/modals/cliente-contact-modal/cliente-contact-modal.component.html
@@ -43,20 +43,17 @@
         </div>
         <div class="col-sm-8">
             <div class="card card-colors" style="height: 300px;">
+                <!--<input type="text" class="form-control" placeholder="Buscar por cédula"
+                    aria-label="Recipient's username" aria-describedby="button-addon2"
+                    formControlName="searchContact">
+                <div class="input-group-append">
+                    <button class="btn btn-outline-secondary" type="button" id="button-addon2"
+                        (click)="buscarCliente()">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </div>-->
                 <div class="card-header headerColor">
-                    <div class="col-sm-6">
-                        <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Buscar por cédula"
-                                aria-label="Recipient's username" aria-describedby="button-addon2"
-                                formControlName="searchContact">
-                            <div class="input-group-append">
-                                <button class="btn btn-outline-secondary" type="button" id="button-addon2"
-                                    (click)="buscarCliente()">
-                                    <i class="fas fa-search"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
+                    <h5>Datos del paciente</h5>
                 </div>
                 <div class="card-body">
                     <div class="row align-items-center h-100">
