--- a/src/app/components/app-main/menu-sidebar/menu-sidebar.component.html
+++ b/src/app/components/app-main/menu-sidebar/menu-sidebar.component.html
@@ -83,6 +83,16 @@
                         </p>
                     </a>
                 </li>
+                <li class="nav-header font-style" *ngIf="currentUser.tipo === 'doctor'">PARAMETRIZACION</li>
+                <li class="nav-item font-style" *ngIf="currentUser.tipo === 'doctor'">
+                    <a routerLink="/horas-laborales" (click)="$event.preventDefault()" 
+                        routerLinkActive="active" class="nav-link">
+                        <i class="far fa-list-alt iconos"></i>
+                        <p>
+                            Horas Laborales
+                        </p>
+                    </a>
+                </li>
 
             </ul>
         </nav>
