--- a/src/app/components/clientPortal/portal/portal.component.html
+++ b/src/app/components/clientPortal/portal/portal.component.html
@@ -350,7 +350,7 @@
                     </div>
                     <br />
                     <owl-date-time-inline [(ngModel)]="selectedMoment" class="owlDatTime" 
-                        [min]="minDateTime" pickerType="calendar" (ngModelChange)='filtrarHorarios($event)'>
+                        [min]="minDateTime" pickerType="calendar" (ngModelChange)='filtrarHorarios()'>
                     </owl-date-time-inline>
                 </div>
             </div>
